@@ -22,6 +22,13 @@ public abstract class TownyObject {
 	public String getTreeDepth(int depth) {
 		char[] fill = new char[depth*4];
 		Arrays.fill(fill, ' ');
+		if (depth > 0) {
+			fill[0] = '|';
+			int offset = (depth-1)*4;
+			fill[offset] = '+';
+			fill[offset+1] = '-';
+			fill[offset+2] = '-';
+		}
 		return new String(fill);
 	}
 	
